2009-02-06  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Addins.Gui.csproj: Updated.

2009-02-06  Lluis Sanchez Gual  <lluis@novell.com>

	* gtk-gui/gui.stetic:
	* gtk-gui/generated.cs:
	* gtk-gui/Mono.Addins.Gui.ErrorDialog.cs:
	* gtk-gui/Mono.Addins.Gui.NewSiteDialog.cs:
	* gtk-gui/Mono.Addins.Gui.ProgressDialog.cs:
	* gtk-gui/Mono.Addins.Gui.AddinInfoDialog.cs:
	* gtk-gui/Mono.Addins.Gui.ManageSitesDialog.cs:
	* gtk-gui/Mono.Addins.Gui.AddinManagerDialog.cs:
	* gtk-gui/Mono.Addins.Gui.AddinInstallDialog.cs:
	* gtk-gui/Mono.Addins.Gui.AddinInstallerDialog.cs: Flush.

2008-11-10  Lluis Sanchez Gual  <lluis@novell.com>

	* mono-addins-gui.pc.in: Respect custom libdir during ./configure. Fixes
	bug #443205. Patch by Diego Pettenò.

2008-11-10  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am: Fix building with parallel make jobs (-j8). Fixes bug
	#443206. Patch by Diego Pettenò.

2008-08-22  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins.Gui.csproj, Mono.Addins.Gui.mdp: Use msbuild file format
	  for projects. Removed the old MD1 projects.

2008-06-11  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins.Gui/AddinManagerDialog.cs: Fix build.

2008-06-11  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins.Gui/AddinManagerDialog.cs: Don't allow uninstalling
	  add-ins with the CantUninstall flag. Same for CantDisable and
	  Hidden flags.

2008-02-15  Lluis Sanchez Gual <lluis@novell.com> 

	* gtk-gui/Mono.Addins.Gui.AddinInstallDialog.cs,
	  gtk-gui/Mono.Addins.Gui.AddinManagerDialog.cs, gtk-gui/gui.stetic,
	  Mono.Addins.Gui.mdp: Flush.

2008-02-06  Lluis Sanchez Gual <lluis@novell.com> 

	* AssemblyInfo.cs: Added support for pluggable add-in assembly reflectors.
	  Implemented an add-in assembly reflector based on Cecil.

2008-01-17  Lluis Sanchez Gual <lluis@novell.com> 

	* gtk-gui/Mono.Addins.Gui.ManageSitesDialog.cs,
	  gtk-gui/Mono.Addins.Gui.AddinInstallDialog.cs,
	  gtk-gui/Mono.Addins.Gui.ErrorDialog.cs,