@@ -33,10 +33,12 @@ using System.IO;
 using System.Text;
 using System.Diagnostics;
 using System.Runtime.Serialization.Formatters.Binary;
+using System.Reflection;
+using System.Reflection.Emit;
 
 namespace Mono.Addins.Database
 {
-	internal class SetupProcess: ISetupHandler
+	class SetupProcess: ISetupHandler
 	{
 		public void Scan (IProgressStatus monitor, string registryPath, string startupDir, string scanFolder, string[] filesToIgnore)
 		{
@@ -50,7 +52,6 @@ namespace Mono.Addins.Database
 		
 		internal static void ExecuteCommand (IProgressStatus monitor, string registryPath, string startupDir, string name, string arg1, params string[] args)
 		{
-			string asm = new Uri (typeof(SetupProcess).Assembly.CodeBase).LocalPath;
 			string verboseParam = monitor.LogLevel.ToString ();
 			
 			// Arguments string
@@ -61,38 +62,48 @@ namespace Mono.Addins.Database
 				sb.Append (" \"").Append (arg).Append ("\"");
 			
 			Process process = new Process ();
-			if (!Util.IsMono)
-				process.StartInfo = new ProcessStartInfo (asm, sb.ToString ());
-			else {
-				asm = asm.Replace(" ", @"\ ");
-				process.StartInfo = new ProcessStartInfo ("mono", "--debug " + asm + " " + sb.ToString ());
-			}
-			process.StartInfo.WorkingDirectory = AppDomain.CurrentDomain.BaseDirectory;
-			process.StartInfo.UseShellExecute = false;
-			process.StartInfo.CreateNoWindow = true;
-			process.StartInfo.RedirectStandardInput = true;
-			process.StartInfo.RedirectStandardOutput = true;
-			process.StartInfo.RedirectStandardError = true;
-			process.EnableRaisingEvents = true;
+			
+			string asm = null;
 			try {
+				asm = CreateHostExe ();
+				if (!Util.IsMono)
+					process.StartInfo = new ProcessStartInfo (asm, sb.ToString ());
+				else {
+					asm = asm.Replace(" ", @"\ ");
+					process.StartInfo = new ProcessStartInfo ("mono", "--debug " + asm + " " + sb.ToString ());
+				}
+				process.StartInfo.WorkingDirectory = AppDomain.CurrentDomain.BaseDirectory;
+				process.StartInfo.UseShellExecute = false;
+				process.StartInfo.CreateNoWindow = true;
+				process.StartInfo.RedirectStandardInput = true;
+				process.StartInfo.RedirectStandardOutput = true;
+				process.StartInfo.RedirectStandardError = true;
+				process.EnableRaisingEvents = true;
 				process.Start ();
+			
+				process.StandardInput.WriteLine (registryPath);
+				process.StandardInput.WriteLine (startupDir);
+				process.StandardInput.Flush ();
+	
+	//			string rr = process.StandardOutput.ReadToEnd ();
+	//			Console.WriteLine (rr);
+				
+				StringCollection progessLog = new StringCollection ();
+				ProcessProgressStatus.MonitorProcessStatus (monitor, process.StandardOutput, progessLog);
+				process.WaitForExit ();
+				if (process.ExitCode != 0)
+					throw new ProcessFailedException (progessLog);
+				
 			} catch (Exception ex) {
 				Console.WriteLine (ex);
 				throw;
+			} finally {
+				if (asm != null) {
+					try {
+						File.Delete (asm);
+					} catch { }
+				}
 			}
-			
-			process.StandardInput.WriteLine (registryPath);
-			process.StandardInput.WriteLine (startupDir);
-			process.StandardInput.Flush ();
-
-//			string rr = process.StandardOutput.ReadToEnd ();
-//			Console.WriteLine (rr);
-			
-			StringCollection progessLog = new StringCollection ();
-			ProcessProgressStatus.MonitorProcessStatus (monitor, process.StandardOutput, progessLog);
-			process.WaitForExit ();
-			if (process.ExitCode != 0)
-				throw new ProcessFailedException (progessLog);
 		}
 		
 		public static int Main (string[] args)
@@ -124,6 +135,41 @@ namespace Mono.Addins.Database
 				return 1;
 			}
 			return 0;
+		}
+		
+		static string CreateHostExe ()
+		{
+			string file;
+			string id;
+			string fullFile;
+			do {
+				id = Guid.NewGuid ().ToString ().Replace ('-','_');
+				file = id + ".exe";
+				fullFile = Path.Combine (Path.GetTempPath (), file);
+			} while (File.Exists (fullFile));
+
+			AssemblyName aname = new AssemblyName ();
+			aname.Name = id;
+			AssemblyBuilder ab = AppDomain.CurrentDomain.DefineDynamicAssembly (aname, AssemblyBuilderAccess.Save, Path.GetTempPath ());
+			ModuleBuilder mb = ab.DefineDynamicModule (aname.Name, file);
+			TypeBuilder tb = mb.DefineType ("App", TypeAttributes.Public|TypeAttributes.Class);
+			
+			MethodBuilder fb = tb.DefineMethod("Main",
+			                                   MethodAttributes.Public |
+			                                   MethodAttributes.Static,
+			                                   typeof(int), new Type[] { typeof(string[]) });
+			
+			MethodInfo mi = typeof(SetupProcess).GetMethod ("Main", BindingFlags.Public | BindingFlags.NonPublic | BindingFlags.Static);
+			
+			ILGenerator ilg = fb.GetILGenerator();
+			ilg.Emit (OpCodes.Ldarg_0);
+			ilg.EmitCall (OpCodes.Call, mi, null);
+			ilg.Emit (OpCodes.Ret);
+			
+			tb.CreateType();
+			ab.SetEntryPoint (fb, PEFileKinds.WindowApplication);
+			ab.Save (file);
+			return fullFile;
 		}
 	}
 	
