@@ -1,3 +1,8 @@
+2009-05-27  Lluis Sanchez Gual  <lluis@novell.com>
+
+	* Mono.Addins.Gui/ProgressDialog.cs: The error dialog must run
+	  in the gui thread.
+
 2009-02-06  Lluis Sanchez Gual  <lluis@novell.com>
 
 	* Mono.Addins.Gui.csproj: Updated.
